mass-cfg-attr-tests/tests/failing_no_mass_cfg_attr/union.stderr
error: use of deprecated field `Union::f`
  --> tests/failing_no_mass_cfg_attr/union.rs:14:13
   |
14 |     Union { f: 0.0 };
   |             ^^^^^^
   |
note: the lint level is defined here
  --> tests/failing_no_mass_cfg_attr/union.rs:1:26
   |
1  | #![deny(unused_must_use, deprecated)]
   |                          ^^^^^^^^^^

error: unused `Union` that must be used
  --> tests/failing_no_mass_cfg_attr/union.rs:14:5
   |
14 |     Union { f: 0.0 };
   |     ^^^^^^^^^^^^^^^^^
   |
note: the lint level is defined here
  --> tests/failing_no_mass_cfg_attr/union.rs:1:9
   |
1  | #![deny(unused_must_use, deprecated)]
   |         ^^^^^^^^^^^^^^^
